[gd_scene load_steps=88 format=2]

[ext_resource path="res://Background resources 29-8-2022/PlayerDeathArea.gd" type="Script" id=1]
[ext_resource path="res://Background resources 29-8-2022/jungle tileset.png" type="Texture" id=2]
[ext_resource path="res://Background resources 29-8-2022/KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://Background resources 29-8-2022/plx-5.png" type="Texture" id=4]
[ext_resource path="res://Background resources 29-8-2022/plx-3.png" type="Texture" id=5]
[ext_resource path="res://Background resources 29-8-2022/plx-4.png" type="Texture" id=6]
[ext_resource path="res://Background resources 29-8-2022/plx-2.png" type="Texture" id=7]
[ext_resource path="res://Background resources 29-8-2022/plx-1.png" type="Texture" id=8]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy01.png" type="Texture" id=9]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy04.png" type="Texture" id=10]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy02.png" type="Texture" id=11]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy03.png" type="Texture" id=12]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect08.png" type="Texture" id=13]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect02.png" type="Texture" id=14]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect01.png" type="Texture" id=15]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect04.png" type="Texture" id=16]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect05.png" type="Texture" id=17]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect09.png" type="Texture" id=18]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect03.png" type="Texture" id=19]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect06.png" type="Texture" id=20]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect07.png" type="Texture" id=21]
[ext_resource path="res://Background resources 29-8-2022/EnemyArea.gd" type="Script" id=22]
[ext_resource path="res://Background resources 29-8-2022/EnemyArea2.gd" type="Script" id=23]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy08.png" type="Texture" id=24]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy07.png" type="Texture" id=25]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy05.png" type="Texture" id=26]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy06.png" type="Texture" id=27]
[ext_resource path="res://Background resources 29-8-2022/EnemyArea3.gd" type="Script" id=28]
[ext_resource path="res://Background resources 29-8-2022/EnemyArea4.gd" type="Script" id=29]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy15.png" type="Texture" id=30]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy16.png" type="Texture" id=31]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect15.png" type="Texture" id=32]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy14.png" type="Texture" id=33]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect11.png" type="Texture" id=34]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect12.png" type="Texture" id=35]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect13.png" type="Texture" id=36]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect14.png" type="Texture" id=37]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy10.png" type="Texture" id=38]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy11.png" type="Texture" id=39]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy12.png" type="Texture" id=40]
[ext_resource path="res://Background resources 29-8-2022/Enemy/Enemy13.png" type="Texture" id=41]
[ext_resource path="res://Background resources 29-8-2022/Effects/Effect10.png" type="Texture" id=42]
[ext_resource path="res://Background resources 29-8-2022/Player/Player08.png" type="Texture" id=43]
[ext_resource path="res://Background resources 29-8-2022/Player/Player09.png" type="Texture" id=44]
[ext_resource path="res://Background resources 29-8-2022/Player/Player01.png" type="Texture" id=45]
[ext_resource path="res://Background resources 29-8-2022/Player/Player02.png" type="Texture" id=46]
[ext_resource path="res://Background resources 29-8-2022/Player/Player13.png" type="Texture" id=47]
[ext_resource path="res://Background resources 29-8-2022/Player/Player14.png" type="Texture" id=48]
[ext_resource path="res://Background resources 29-8-2022/Player/Player15.png" type="Texture" id=49]
[ext_resource path="res://Background resources 29-8-2022/Player/Player16.png" type="Texture" id=50]
[ext_resource path="res://Background resources 29-8-2022/Player/Player17.png" type="Texture" id=51]
[ext_resource path="res://Background resources 29-8-2022/Player/Player18.png" type="Texture" id=52]
[ext_resource path="res://Background resources 29-8-2022/Player/Player07.png" type="Texture" id=53]
[ext_resource path="res://Background resources 29-8-2022/Player/Player04.png" type="Texture" id=54]
[ext_resource path="res://Background resources 29-8-2022/Player/Player11.png" type="Texture" id=55]
[ext_resource path="res://Background resources 29-8-2022/Player/Player03.png" type="Texture" id=56]
[ext_resource path="res://Background resources 29-8-2022/Player/Player05.png" type="Texture" id=57]
[ext_resource path="res://Background resources 29-8-2022/Player/Player12.png" type="Texture" id=58]
[ext_resource path="res://Background resources 29-8-2022/Player/Player10.png" type="Texture" id=59]
[ext_resource path="res://Background resources 29-8-2022/Player/Player06.png" type="Texture" id=60]
[ext_resource path="res://Background resources 29-8-2022/Quartz.png" type="Texture" id=61]
[ext_resource path="res://Background resources 29-8-2022/FinishStaticBody.gd" type="Script" id=62]
[ext_resource path="res://Background resources 29-8-2022/HUD_map2.tscn" type="PackedScene" id=63]

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 160, 0, 160, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 112, 0, 112, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 0, 0, 80, 0, 80, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 32, 0, 48, 0, 48, 16, 64, 16, 64, 32, 80, 32, 80, 48, 0, 48, 0, 32, 16, 32, 16, 16, 32, 16 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 0, 96, 0, 96, 16, 0, 16 )

[sub_resource type="TileSet" id=16]
0/name = "jungle tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 224, 160, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 25 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "jungle tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 128, 48, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 26 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "jungle tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 160, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 27 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "jungle tileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 320, 144, 112, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 28 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "jungle tileset.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 528, 112, 80, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 29 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "jungle tileset.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 672, 240, 80, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 30 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "jungle tileset.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 160, 96, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 31 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "jungle tileset.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 128, 128, 96, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 32 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 276, 8.5 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ ExtResource( 60 ), ExtResource( 53 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 59 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 57 ) ],
"loop": true,
"name": "MoveRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 18 ) ],
"loop": true,
"name": "Destroy",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": true,
"name": "AttackLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 58 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "AttackRight",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 7.0
height = 7.0

[sub_resource type="CapsuleShape2D" id=33]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=34]
radius = 8.0

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 8, 10 )

[sub_resource type="CapsuleShape2D" id=35]
radius = 23.0
height = 0.0

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 18 ) ],
"loop": true,
"name": "Destroy",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=37]

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 18 ) ],
"loop": true,
"name": "Destroy",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 26 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=39]
radius = 19.0

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 32 ) ],
"loop": true,
"name": "Destroy",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=42]
radius = 20.0

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 32 ) ],
"loop": true,
"name": "Destroy",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 10, 20.25 )

[node name="Scene2" type="Node2D"]

[node name="Platforms" type="TileMap" parent="."]
tile_set = SubResource( 16 )
cell_size = Vector2( 8, 8 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 42, -1073741819, 0, 196618, 4, 0, 262169, 2, 0, 262179, 4, 0, 458747, 4, 0, 655363, 5, 0, 786437, 1, 0, 851985, 3, 0, 852002, 2, 0, 983034, 4, 0, 1179689, 4, 0, 1376295, 6, 0, 1441816, 1, 0, 1572864, 0, 0, 1638435, 7, 0 )

[node name="FallArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallArea"]
position = Vector2( 180, 239.5 )
shape = SubResource( 24 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="plx-1" type="Sprite" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2( 192, 108 )
texture = ExtResource( 8 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="plx-2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 192, 108 )
texture = ExtResource( 7 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="plx-3" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 192, 108 )
texture = ExtResource( 5 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 192, 108 )

[node name="plx-4" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 6 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 192, 108 )

[node name="plx-5" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 0, -20 )
scale = Vector2( 1, 1.18519 )
texture = ExtResource( 4 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -48, 144 )
script = ExtResource( 3 )

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 80, 24 )
frames = SubResource( 44 )
animation = "MoveRight"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 80, 26 )
shape = SubResource( 9 )

[node name="AttackRightArea" type="Area2D" parent="KinematicBody2D" groups=["Sword"]]
position = Vector2( 48, -144 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/AttackRightArea"]
position = Vector2( 50, 172 )
shape = SubResource( 33 )
disabled = true

[node name="AttackLeftArea" type="Area2D" parent="KinematicBody2D" groups=["Sword"]]
position = Vector2( 48, -144 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/AttackLeftArea"]
position = Vector2( 14, 172 )
shape = SubResource( 34 )
disabled = true

[node name="PlayerDeathArea" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 48, -144 )
script = ExtResource( 1 )

[node name="PlayerDeathCollision" type="CollisionShape2D" parent="KinematicBody2D/PlayerDeathArea"]
position = Vector2( 32, 170 )
shape = SubResource( 45 )

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D/PlayerDeathArea"]
visible = false
position = Vector2( 8, 168 )
frames = SubResource( 44 )
animation = "MoveRight"
speed_scale = 10.0

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = -40
limit_right = 383
limit_bottom = 215
editor_draw_limits = true

[node name="Enemy" type="YSort" parent="."]

[node name="EnemyArea" type="Area2D" parent="Enemy" groups=["Enemy"]]
script = ExtResource( 22 )

[node name="EnemyCollision" type="CollisionShape2D" parent="Enemy/EnemyArea"]
position = Vector2( 120, 176 )
shape = SubResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy/EnemyArea"]
position = Vector2( 120, 176 )
frames = SubResource( 36 )
animation = "Idle"
speed_scale = 3.0

[node name="EnemyArea2" type="Area2D" parent="Enemy" groups=["Enemy"]]
position = Vector2( 368, 136 )
script = ExtResource( 23 )

[node name="EnemyCollision2" type="CollisionShape2D" parent="Enemy/EnemyArea2"]
shape = SubResource( 37 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Enemy/EnemyArea2"]
frames = SubResource( 38 )
animation = "Idle"
speed_scale = 3.0

[node name="EnemyArea3" type="Area2D" parent="Enemy" groups=["Enemy"]]
position = Vector2( 168, 88 )
script = ExtResource( 28 )

[node name="EnemyCollision3" type="CollisionShape2D" parent="Enemy/EnemyArea3"]
shape = SubResource( 39 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Enemy/EnemyArea3"]
frames = SubResource( 40 )
animation = "Idle"
speed_scale = 2.0

[node name="EnemyArea4" type="Area2D" parent="Enemy" groups=["Enemy"]]
position = Vector2( 336, 16 )
script = ExtResource( 29 )

[node name="EnemyCollision4" type="CollisionShape2D" parent="Enemy/EnemyArea4"]
shape = SubResource( 42 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Enemy/EnemyArea4"]
frames = SubResource( 41 )
animation = "Idle"
speed_scale = 2.0

[node name="FinishStaticBody" type="StaticBody2D" parent="."]
script = ExtResource( 62 )

[node name="QuartzShowUp" type="Area2D" parent="FinishStaticBody"]

[node name="QuartzCollision" type="CollisionShape2D" parent="FinishStaticBody/QuartzShowUp"]
position = Vector2( 373, -18 )
shape = SubResource( 46 )

[node name="Quartz" type="Sprite" parent="FinishStaticBody"]
position = Vector2( 376, -16 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 61 )

[node name="HUD_map2" parent="." instance=ExtResource( 63 )]

[connection signal="body_entered" from="FallArea" to="KinematicBody2D" method="_on_FallArea_body_entered"]
[connection signal="animation_finished" from="KinematicBody2D/PlayerAnimatedSprite" to="KinematicBody2D" method="_on_PlayerAnimatedSprite_animation_finished"]
[connection signal="area_entered" from="KinematicBody2D/PlayerDeathArea" to="KinematicBody2D/PlayerDeathArea" method="_on_PlayerDeathArea_area_entered"]
[connection signal="animation_finished" from="KinematicBody2D/PlayerDeathArea/PlayerAnimatedSprite" to="KinematicBody2D" method="_on_PlayerAnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="KinematicBody2D/PlayerDeathArea/PlayerAnimatedSprite" to="KinematicBody2D/PlayerDeathArea" method="_on_PlayerAnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Enemy/EnemyArea" to="Enemy/EnemyArea" method="_on_EnemyArea_area_entered"]
[connection signal="animation_finished" from="Enemy/EnemyArea/AnimatedSprite" to="Enemy/EnemyArea" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Enemy/EnemyArea2" to="Enemy/EnemyArea2" method="_on_EnemyArea2_area_entered"]
[connection signal="animation_finished" from="Enemy/EnemyArea2/AnimatedSprite2" to="Enemy/EnemyArea2" method="_on_AnimatedSprite2_animation_finished"]
[connection signal="area_entered" from="Enemy/EnemyArea3" to="Enemy/EnemyArea3" method="_on_EnemyArea3_area_entered"]
[connection signal="animation_finished" from="Enemy/EnemyArea3/AnimatedSprite3" to="Enemy/EnemyArea3" method="_on_AnimatedSprite3_animation_finished"]
[connection signal="area_entered" from="Enemy/EnemyArea4" to="Enemy/EnemyArea4" method="_on_EnemyArea4_area_entered"]
[connection signal="animation_finished" from="Enemy/EnemyArea4/AnimatedSprite4" to="Enemy/EnemyArea4" method="_on_AnimatedSprite4_animation_finished"]
[connection signal="area_entered" from="FinishStaticBody/QuartzShowUp" to="KinematicBody2D" method="_on_QuartzShowUp_area_entered"]
